added relationships to tweet and user for tweeting. added factory for tweet and user and seed. margin around the body for now. added columns to user.

--- a/resources/views/welcome.njk
+++ b/resources/views/welcome.njk
@@ -1,10 +1,10 @@
 {% extends 'master' %}
 
 {% block content %}
-  <div class="__banner">
-    <div class="banner__inner">
-      <img src="/assets/logo.svg">
-      <h2>Practical <span>Reliable</span> Productive</h2>
-    </div>
-  </div>
+  <section>
+    <h1>Welcome to &quot;Twitter&quot;</h1>
+    <a href="/login">Log in</a>
+    <br>
+    <a href="/register">Register</a>
+  </section>
 {% endblock %}
