--- a/resources/views/master.njk
+++ b/resources/views/master.njk
@@ -10,6 +10,7 @@
   <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,200,300,600,700,900' rel='stylesheet' type='text/css'>
   <link rel="icon" href="/assets/favicon.png" type="image/x-icon">
   <link rel="stylesheet" type="text/css" href="style.css">
+  {#<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.3.0/css/foundation.min.css"/>#}
 </head>
 <body>
 
@@ -38,5 +39,6 @@
     </div>
   </section>
 
+{#<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.3.0/js/foundation.min.js"></script>#}
 </body>
 </html>
