--- a/resources/views/master.njk
+++ b/resources/views/master.njk
@@ -25,13 +25,10 @@
           <li>
             <a href="/logout">Log out</a>
           </li>
-        {% else %}
-          <li>
-            <a href="/login">Log in</a>
-          </li>
-          <li>
-            <a href="/register">Register</a>
-          </li>
+        {#{% else %}#}
+          {#<li>#}
+            {#<a href="/register">Register</a>#}
+          {#</li>#}
         {% endif %}
       </ul>
     </nav>
