--- a/resources/views/login.njk
+++ b/resources/views/login.njk
@@ -2,7 +2,7 @@
 
 {% block content %}
   <section class="small-9 columns">
-    <h2>Welcome to "Twitter"</h2>
+    <h2>Welcome to Twittah</h2>
     <h5>You don't win friends with salad.</h5>
     <p>
       Facts are meaningless. You could use facts to prove anything that's even remotely true!
