--- a/resources/views/master.njk
+++ b/resources/views/master.njk
@@ -15,8 +15,8 @@
 <body>
 
   <header class="row">
-    <nav class="small-12 columns">
-      <h1 class="small-3 columns"><a href="/">"Twitter"</a></h1>
+    <nav class="">
+      <h3 class="small-3 columns"><a href="/">Twittah</a></h3>
       <ul class="menu small-9 columns">
         {% if currentUser %}
           <li>
