fixed bug where firstname, and lastname wouldn't get saved to the database. work on factory method for followers

--- a/resources/views/register.njk
+++ b/resources/views/register.njk
@@ -9,12 +9,12 @@
       {{ form.text('username') }}
     </div>
     <div>
-      {{ form.label('first', 'First name') }}
-      {{ form.text('first') }}
+      {{ form.label('firstname', 'First name') }}
+      {{ form.text('firstname') }}
     </div>
     <div>
-      {{ form.label('last', 'Last name') }}
-      {{ form.text('last') }}
+      {{ form.label('lastname', 'Last name') }}
+      {{ form.text('lastname') }}
     </div>
     <div>
       {{ form.label('email', 'Email') }}
