--- a/resources/views/userIndex.njk
+++ b/resources/views/userIndex.njk
@@ -8,10 +8,23 @@
          data-margin-top="0"
     >
       <div>
-        <h3>
-          <a href="/profile/{{ user.id }}">{{ user.firstname + " " + user.lastname }}</a>
-          <a href="/profile/{{ user.id }}"><small>&commat; {{ user.username }}</small></a>
-        </h3>
+        <div class="clearfix">
+          <h3 class="float-left">
+            {{ user.firstname + " " + user.lastname }}
+            <small>
+              &commat; {{ user.username }}
+            </small>
+          </h3>
+          <ul class="dropdown menu" data-dropdown-menu>
+            <li>
+              <a href="#">+</a>
+              <ul class="menu">
+                <li><a href="/profile/{{ user.id }}">View Profile</a></li>
+                <li><a href="/logout">Log out</a></li>
+              </ul>
+            </li>
+          </ul>
+        </div>
         <div class="">
           <div class="row">
             <p class="column small-4"><small>TWEETS</small></p>
@@ -23,6 +36,15 @@
             <p class="column small-4">800</p>
             <p class="column small-4">800</p>
           </div>
+        </div>
+        <hr/>
+        <div>
+          <h5>New Tweet</h5>
+          {{ form.open({action: 'TweetController.store'}) }}
+            {{ csrfField }}
+            {{ form.textarea('newTweet', 'What&apos;s going on?') }}
+            {{ form.submit('Tweet', '', {class: 'button small expanded'}) }}
+          {{ form.close() }}
         </div>
       </div>
       {#<nav>#}
