--- a/resources/views/userIndex.njk
+++ b/resources/views/userIndex.njk
@@ -32,9 +32,9 @@
             <p class="column small-4"><small>FOLLOWING</small></p>
           </div>
           <div class="row">
-            <p class="column small-4">800</p>
-            <p class="column small-4">800</p>
-            <p class="column small-4">800</p>
+            <p class="column small-4">{{ user.tweets_count }}</p>
+            <p class="column small-4">{{ user.followers_count }}</p>
+            <p class="column small-4">{{ user.following_count }}</p>
           </div>
         </div>
         <hr/>
@@ -42,22 +42,17 @@
           <h5>New Tweet</h5>
           {{ form.open({action: 'TweetController.store'}) }}
             {{ csrfField }}
-            {{ form.textarea('newTweet', 'What&apos;s going on?') }}
+            {{ form.textarea('newTweet', '', {placeholder: 'What&apos;s going on?'}) }}
             {{ form.submit('Tweet', '', {class: 'button small expanded'}) }}
           {{ form.close() }}
         </div>
       </div>
-      {#<nav>#}
-        {#<a class="small-4 column hollow button" href="/profile/{{ user.id }}">My Profile</a>#}
-        {#<a class="small-4 column hollow button" href="users/{{ user.id }}/settings">Settings</a>#}
-        {#<a class="small-4 column hollow button" href="/logout">Logout</a>#}
-      {#</nav>#}
     </div>
       <div id="tweets" class="small-12 medium-8 columns">
       {% for tweet in tweets %}
         <article>
           <p><a href="/profile/{{ tweet.user_id }}">{{ tweet.username }}</a>
-            <small>{{ tweet.created_at }}</small>
+            <small>{{ tweet.dateStr }}</small>
             {% if tweet.created_at != tweet.updated_at %}
               <small> Edited</small>
             {% endif %}
