--- a/resources/views/userIndex.njk
+++ b/resources/views/userIndex.njk
@@ -36,6 +36,11 @@
             <p class="column small-4">{{ user.followers_count }}</p>
             <p class="column small-4">{{ user.following_count }}</p>
           </div>
+          <div>
+            <p>
+              {{ user.description }}
+            </p>
+          </div>
         </div>
         <hr/>
         <div>
