--- a/resources/views/user/deactivate.njk
+++ b/resources/views/user/deactivate.njk
@@ -3,7 +3,10 @@
   <p>You can always come back later, but we hate to see you go.</p>
   {{ form.open({action: 'UserController.deactivate'}) }}
   {{ csrfField }}
-  {{ form.submit('Deactivate my account', '', {class: 'button hollow alert'}) }}
+  {{ form.submit('Deactivate my account', '', {class: 'button hollow alert small-6 column'}) }}
   {{ form.close() }}
-  <button class="close-button button hollow" data-close aria-label="Close Modal" type="button">Cancel</button>
+  <button class="small-6 column button hollow" data-close aria-label="Cancel" type="button">Cancel</button>
+  <button class="close-button" data-close aria-label="Close modal" type="button">
+    <span aria-hidden="true">&times;</span>
+  </button>
 </div>
