--- a/resources/views/userIndex.njk
+++ b/resources/views/userIndex.njk
@@ -54,21 +54,24 @@
       </div>
     </div>
       <div id="tweets" class="small-12 medium-8 columns">
-      {% for tweet in tweets %}
-        <article>
-          <p><a href="/profile/{{ tweet.user_id }}">{{ tweet.username }}</a>
-            <small>{{ tweet.dateStr }}</small>
-            {% if tweet.created_at != tweet.updated_at %}
-              <small> Edited</small>
-            {% endif %}
-          </p>
-          <p>
-            {{ tweet.content }}
-          </p>
-          <hr/>
-        </article>
-      {% endfor %}
+        {% include 'tweets/tweetList' %}
+      {#{% for tweet in tweets %}#}
+        {#<article>#}
+          {#<p><a href="/profile/{{ tweet.user_id }}">{{ tweet.username }}</a>#}
+            {#<small>{{ tweet.dateStr }}</small>#}
+            {#{% if tweet.created_at != tweet.updated_at %}#}
+              {#<small> Edited</small>#}
+            {#{% endif %}#}
+          {#</p>#}
+          {#<p>#}
+            {#{{ tweet.content }}#}
+          {#</p>#}
+          {#<hr/>#}
+        {#</article>#}
+      {#{% endfor %}#}
       </div>
   </section>
+  {% include 'scripts/foundation' %}
+
 
 {% endblock %}
