--- a/resources/views/tweets/tweetList.njk
+++ b/resources/views/tweets/tweetList.njk
@@ -16,11 +16,11 @@
 
 <div class="reveal" data-reveal id="modal-tweet">
   <button id="tweet-edit-btn" class="button hollow hide">edit</button>
-  <form id="tweet-edit-form" enctype="application/x-www-form-urlencoded">
+  <form method="POST" id="tweet-edit-form" enctype="application/x-www-form-urlencoded">
     {{ csrfField }}
     <h5 id="tweet-user"><small>&commat; <span id="tweet-name"></span></small></h5>
     <p id="tweet-content"></p>
-    <textarea id="tweet-content-textarea" class="hide"></textarea>
+    <textarea id="tweet-content-textarea" name="content" class="hide"></textarea>
     <button id="tweet-submit" type="submit" class="button hide small-12 column">Update</button>
   </form>
   <button class="close-button" data-close aria-label="Close modal" type="button">
