--- a/resources/views/master.njk
+++ b/resources/views/master.njk
@@ -14,15 +14,18 @@
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 </head>
 <body>
-
+  <br/>
   <header class="row">
     <nav class="">
-      <h3 id="logo" class="small-3 columns">
+      <h3 id="logo" class="small-4 columns">
         <a href="/">
           Twittah
           <small><span id="homeIcon" class="hide">Home</span></small>
         </a>
       </h3>
+      <div id="search" class="small-8 columns">
+        {% include 'user/search' %}
+      </div>
       {#<ul class="menu small-9 columns">#}
         {#{% if currentUser %}#}
           {#<li>#}
